# Metronome

./: .gitignore  .travis.yml  CMakeLists.txt  ClickSample.cpp  Main.cpp  Metronome.cpp  Metronome.h  README.md
JuceLibraryCode/: AppConfig.h  JuceHeader.h  include_juce_audio_basics.cpp  include_juce_audio_devices.cpp  include_juce_core.cpp  include_juce_events.cpp
Qml/: Main.qml  qml.qrc
r8brain-free-src/: pffft.h
